jhooq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jhooq-springboot
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  selector:
    app: jhooq-springboot
