product-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: product-service-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: oam.cluster-01.company.com
    http:
      paths:
      - path: /product
        backend:
          serviceName: spring-reactive-product-service
          servicePort: http
